--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URL = mongodb://127.0.0.1:27017/
-Token_secret = GOURAVNEXTJS
+MONGO_URL = mongodb://127.0.0.1:27017/nextAuth
+TOKEN_SECRET = GOURAVNEXTJS
 DOMAIN = http://localhost:3000
