get profile data and add verify mail api

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGO_URL = mongodb://127.0.0.1:27017/nextAuth
 TOKEN_SECRET = GOURAVNEXTJS
 DOMAIN = http://localhost:3000
+MAIL_USER_ID = 3ac8125702deeb
+MAIL_USER_PASS = a8c9760f6674a1
