--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.10",
     "jsonwebtoken": "^9.0.2",
+    "mini-svg-data-uri": "^1.4.4",
     "mongoose": "^8.4.1",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
